--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
       
           <div id="bar">
             <div id="gallery">
-
-                <img src="arron.jpg " id="photo1" alt="clickable image"  >
-                <img src="etzabeth.jpg" id="photo2">
-                <img src="siya.jpg" id="photo3">
-                <img src="ardie.jpg" id="photo4">
+                <img src="images/arron.jpg" id="photo1">
+                <img src="images/ardie.jpg" id="photo2">
+                <img src="images/siya.jpg" id="photo3">
+                <img src="images/etzabeth.jpg" id="photo4">
                 
           </div>
           <img>
